feat: enhance security and role management; update JWT handling and configuration for internal token